# frontendii-ids

Parcial_I/cafeteria-inteligente/: index.html  package-lock.json  package.json
Parcial_I/cafeteria-inteligente/src/: App.jsx
Parcial_I/cine-app/: package-lock.json  package.json
Parcial_I/cine-app/src/: App.css  App.jsx
Parcial_I/restaurant-reservation-manager/: index.html  package-lock.json  package.json
Parcial_I/restaurant-reservation-manager/src/: App.jsx
Parcial_II/practica-5-agencia-carros/: README.md
Parcial_II/practica-5-agencia-carros/backend/: README.md  manage.py  pyproject.toml
Parcial_II/practica-5-agencia-carros/backend/car_agency/: asgi.py  settings.py  urls.py  wsgi.py
Parcial_II/practica-5-agencia-carros/backend/cars/: admin.py  models.py  pagination.py  serializers.py  views.py
Parcial_II/practica-5-agencia-carros/backend/cars/management/commands/: seed_cars.py
Parcial_II/practica-5-agencia-carros/backend/cars/migrations/: 0001_initial.py
Parcial_II/practica-5-agencia-carros/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
Parcial_II/practica-5-agencia-carros/frontend/src/: App.css  App.jsx
Parcial_II/practica-5-agencia-carros/frontend/src/components/: CarCard.jsx  CarList.jsx  EmptyState.jsx  FilterBar.jsx  Pagination.jsx  TheorySection.jsx
Parcial_II/student-grade-manager/: README.md  index.html  package-lock.json  package.json
Parcial_II/student-grade-manager/src/: App.css  App.jsx
Parcial_II/student-grade-manager/src/components/: StudentCard.jsx  StudentForm.jsx  StudentList.jsx
