[project]
name = "backend"
version = "0.1.0"
description = "Backend Django REST Framework para una agencia de carros"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.0",
    "djangorestframework>=3.16.0",
    "django-cors-headers>=4.7.0",
]

[tool.uv]
package = false
